// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions renders disabled action snapshot 1`] = `
<div
  className="Component Actions Test"
  id="test"
>
  <div
    className="Action"
    id="test-giveTo"
    onClick={[Function]}
  >
    Gib
  </div>
  <div
    className="Action"
    id="test-open"
    onClick={[Function]}
  >
    Öffne
  </div>
  <div
    className="Action"
    id="test-pickUp"
    onClick={[Function]}
  >
    Nimm
  </div>
  <div
    className="Action"
    id="test-lookAt"
    onClick={[Function]}
  >
    Schau
  </div>
  <div
    className="Action"
    id="test-talkTo"
    onClick={[Function]}
  >
    Rede mit
  </div>
  <div
    className="Action"
    id="test-push"
    onClick={[Function]}
  >
    Drücke
  </div>
  <div
    className="Action"
    id="test-pull"
    onClick={[Function]}
  >
    Ziehe
  </div>
  <div
    className="Action"
    id="test-goto"
    onClick={[Function]}
  >
    Gehe zu
  </div>
  <div
    className="Action"
    id="test-use"
    onClick={[Function]}
  >
    Benutze
  </div>
  <div
    className="Action"
    id="test-save"
    onClick={[Function]}
  >
    Speichern
  </div>
  <div
    className="Action"
    id="test-load"
    onClick={[Function]}
  >
    Laden
  </div>
  <button
    className="EditorButton"
    id="test-editorButton"
    onClick={[Function]}
  />
</div>
`;

exports[`Actions renders disabled editor snapshot 1`] = `
<div
  className="Component Actions Test"
  id="test"
>
  <div
    className="Action"
    id="test-giveTo"
    onClick={[Function]}
  >
    Gib
  </div>
  <div
    className="Action"
    id="test-open"
    onClick={[Function]}
  >
    Öffne
  </div>
  <div
    className="Action"
    id="test-close"
    onClick={[Function]}
  >
    Schließe
  </div>
  <div
    className="Action"
    id="test-pickUp"
    onClick={[Function]}
  >
    Nimm
  </div>
  <div
    className="Action"
    id="test-lookAt"
    onClick={[Function]}
  >
    Schau
  </div>
  <div
    className="Action"
    id="test-talkTo"
    onClick={[Function]}
  >
    Rede mit
  </div>
  <div
    className="Action"
    id="test-push"
    onClick={[Function]}
  >
    Drücke
  </div>
  <div
    className="Action"
    id="test-pull"
    onClick={[Function]}
  >
    Ziehe
  </div>
  <div
    className="Action"
    id="test-goto"
    onClick={[Function]}
  >
    Gehe zu
  </div>
  <div
    className="Action"
    id="test-use"
    onClick={[Function]}
  >
    Benutze
  </div>
  <div
    className="Action"
    id="test-save"
    onClick={[Function]}
  >
    Speichern
  </div>
  <div
    className="Action"
    id="test-load"
    onClick={[Function]}
  >
    Laden
  </div>
</div>
`;

exports[`Actions renders editor snapshot 1`] = `
<div
  className="Component Actions Test"
  id="test"
>
  <div
    className="Action"
    id="test-giveTo"
    onClick={[Function]}
  >
    Gib
  </div>
  <div
    className="Action"
    id="test-open"
    onClick={[Function]}
  >
    Öffne
  </div>
  <div
    className="Action"
    id="test-close"
    onClick={[Function]}
  >
    Schließe
  </div>
  <div
    className="Action"
    id="test-pickUp"
    onClick={[Function]}
  >
    Nimm
  </div>
  <div
    className="Action"
    id="test-lookAt"
    onClick={[Function]}
  >
    Schau
  </div>
  <div
    className="Action"
    id="test-talkTo"
    onClick={[Function]}
  >
    Rede mit
  </div>
  <div
    className="Action"
    id="test-push"
    onClick={[Function]}
  >
    Drücke
  </div>
  <div
    className="Action"
    id="test-pull"
    onClick={[Function]}
  >
    Ziehe
  </div>
  <div
    className="Action"
    id="test-goto"
    onClick={[Function]}
  >
    Gehe zu
  </div>
  <div
    className="Action"
    id="test-use"
    onClick={[Function]}
  >
    Benutze
  </div>
  <div
    className="Action"
    id="test-save"
    onClick={[Function]}
  >
    Speichern
  </div>
  <div
    className="Action"
    id="test-load"
    onClick={[Function]}
  >
    Laden
  </div>
  <div
    className="Component ModalDialog"
    id="test-dialog"
  >
    <div
      className="Dialog"
    >
      <div
        className="Header"
      >
        <span>
          Actions
        </span>
        <span
          className="X"
          id="test-dialog-x"
          onClick={[Function]}
        >
          X
        </span>
      </div>
      <div
        className="Content"
      >
        <div
          className="Component PropertyGrid"
          id="test-propertyGrid"
        >
          <div
            className="Object"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-1"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="Caption"
              htmlFor="test-propertyGrid-item-1"
            >
              giveTo
            </label>
            <div
              className="ExpanderContent"
            >
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-2"
                >
                  name
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultValue="Gib"
                    id="test-propertyGrid-item-2"
                    onChange={[Function]}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-3"
                >
                  isEnabled
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultChecked={true}
                    id="test-propertyGrid-item-3"
                    onChange={[Function]}
                    type="checkbox"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="Object"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-4"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="Caption"
              htmlFor="test-propertyGrid-item-4"
            >
              open
            </label>
            <div
              className="ExpanderContent"
            >
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-5"
                >
                  name
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultValue="Öffne"
                    id="test-propertyGrid-item-5"
                    onChange={[Function]}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-6"
                >
                  isEnabled
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultChecked={true}
                    id="test-propertyGrid-item-6"
                    onChange={[Function]}
                    type="checkbox"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="Object"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-7"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="Caption"
              htmlFor="test-propertyGrid-item-7"
            >
              close
            </label>
            <div
              className="ExpanderContent"
            >
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-8"
                >
                  name
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultValue="Schließe"
                    id="test-propertyGrid-item-8"
                    onChange={[Function]}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-9"
                >
                  isEnabled
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultChecked={true}
                    id="test-propertyGrid-item-9"
                    onChange={[Function]}
                    type="checkbox"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="Object"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-10"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="Caption"
              htmlFor="test-propertyGrid-item-10"
            >
              pickUp
            </label>
            <div
              className="ExpanderContent"
            >
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-11"
                >
                  name
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultValue="Nimm"
                    id="test-propertyGrid-item-11"
                    onChange={[Function]}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-12"
                >
                  isEnabled
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultChecked={true}
                    id="test-propertyGrid-item-12"
                    onChange={[Function]}
                    type="checkbox"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="Object"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-13"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="Caption"
              htmlFor="test-propertyGrid-item-13"
            >
              lookAt
            </label>
            <div
              className="ExpanderContent"
            >
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-14"
                >
                  name
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultValue="Schau"
                    id="test-propertyGrid-item-14"
                    onChange={[Function]}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-15"
                >
                  isEnabled
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultChecked={true}
                    id="test-propertyGrid-item-15"
                    onChange={[Function]}
                    type="checkbox"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="Object"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-16"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="Caption"
              htmlFor="test-propertyGrid-item-16"
            >
              talkTo
            </label>
            <div
              className="ExpanderContent"
            >
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-17"
                >
                  name
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultValue="Rede mit"
                    id="test-propertyGrid-item-17"
                    onChange={[Function]}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-18"
                >
                  isEnabled
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultChecked={true}
                    id="test-propertyGrid-item-18"
                    onChange={[Function]}
                    type="checkbox"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="Object"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-19"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="Caption"
              htmlFor="test-propertyGrid-item-19"
            >
              push
            </label>
            <div
              className="ExpanderContent"
            >
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-20"
                >
                  name
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultValue="Drücke"
                    id="test-propertyGrid-item-20"
                    onChange={[Function]}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-21"
                >
                  isEnabled
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultChecked={true}
                    id="test-propertyGrid-item-21"
                    onChange={[Function]}
                    type="checkbox"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="Object"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-22"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="Caption"
              htmlFor="test-propertyGrid-item-22"
            >
              pull
            </label>
            <div
              className="ExpanderContent"
            >
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-23"
                >
                  name
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultValue="Ziehe"
                    id="test-propertyGrid-item-23"
                    onChange={[Function]}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-24"
                >
                  isEnabled
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultChecked={true}
                    id="test-propertyGrid-item-24"
                    onChange={[Function]}
                    type="checkbox"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="Object"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-25"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="Caption"
              htmlFor="test-propertyGrid-item-25"
            >
              goto
            </label>
            <div
              className="ExpanderContent"
            >
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-26"
                >
                  name
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultValue="Gehe zu"
                    id="test-propertyGrid-item-26"
                    onChange={[Function]}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-27"
                >
                  isEnabled
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultChecked={true}
                    id="test-propertyGrid-item-27"
                    onChange={[Function]}
                    type="checkbox"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="Object"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-28"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="Caption"
              htmlFor="test-propertyGrid-item-28"
            >
              use
            </label>
            <div
              className="ExpanderContent"
            >
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-29"
                >
                  name
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultValue="Benutze"
                    id="test-propertyGrid-item-29"
                    onChange={[Function]}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-30"
                >
                  isEnabled
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultChecked={true}
                    id="test-propertyGrid-item-30"
                    onChange={[Function]}
                    type="checkbox"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="Object"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-31"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="Caption"
              htmlFor="test-propertyGrid-item-31"
            >
              save
            </label>
            <div
              className="ExpanderContent"
            >
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-32"
                >
                  name
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultValue="Speichern"
                    id="test-propertyGrid-item-32"
                    onChange={[Function]}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-33"
                >
                  isEnabled
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultChecked={true}
                    id="test-propertyGrid-item-33"
                    onChange={[Function]}
                    type="checkbox"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="Object"
          >
            <input
              className="Expander"
              defaultChecked={true}
              id="test-propertyGrid-item-34"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="Caption"
              htmlFor="test-propertyGrid-item-34"
            >
              load
            </label>
            <div
              className="ExpanderContent"
            >
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-35"
                >
                  name
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultValue="Laden"
                    id="test-propertyGrid-item-35"
                    onChange={[Function]}
                    type="text"
                  />
                </div>
              </div>
              <div
                className="Value"
              >
                <label
                  className="Caption"
                  htmlFor="test-propertyGrid-item-36"
                >
                  isEnabled
                </label>
                <div
                  className="ExpanderContent"
                >
                  <input
                    className="Editor"
                    defaultChecked={true}
                    id="test-propertyGrid-item-36"
                    onChange={[Function]}
                    type="checkbox"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="Footer"
      >
        <button
          id="test-dialog-okay"
          onClick={[Function]}
        >
          Okay
        </button>
        <button
          id="test-dialog-cancel"
          onClick={[Function]}
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Actions renders snapshot 1`] = `
<div
  className="Component Actions Test"
  id="test"
>
  <div
    className="Action"
    id="test-giveTo"
    onClick={[Function]}
  >
    Gib
  </div>
  <div
    className="Action"
    id="test-open"
    onClick={[Function]}
  >
    Öffne
  </div>
  <div
    className="Action"
    id="test-close"
    onClick={[Function]}
  >
    Schließe
  </div>
  <div
    className="Action"
    id="test-pickUp"
    onClick={[Function]}
  >
    Nimm
  </div>
  <div
    className="Action"
    id="test-lookAt"
    onClick={[Function]}
  >
    Schau
  </div>
  <div
    className="Action"
    id="test-talkTo"
    onClick={[Function]}
  >
    Rede mit
  </div>
  <div
    className="Action"
    id="test-push"
    onClick={[Function]}
  >
    Drücke
  </div>
  <div
    className="Action"
    id="test-pull"
    onClick={[Function]}
  >
    Ziehe
  </div>
  <div
    className="Action"
    id="test-goto"
    onClick={[Function]}
  >
    Gehe zu
  </div>
  <div
    className="Action"
    id="test-use"
    onClick={[Function]}
  >
    Benutze
  </div>
  <div
    className="Action"
    id="test-save"
    onClick={[Function]}
  >
    Speichern
  </div>
  <div
    className="Action"
    id="test-load"
    onClick={[Function]}
  >
    Laden
  </div>
  <button
    className="EditorButton"
    id="test-editorButton"
    onClick={[Function]}
  />
</div>
`;
